--- a/style.css
+++ b/style.css
@@ -4,14 +4,19 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth
+}
+
 /* Navbar */
 .navbar{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color : rgba(red, green, blue, alpha);
+    background-color : black;
     position: sticky;
     top: 0;
+    left: 0;
 }
 
 .navbar ul{
@@ -22,6 +27,7 @@
 
 .navbar ul li{
     font-family: AvantGarde-Medium;
+    text-transform: uppercase;
     font-size: 20px;
     font-weight: bold;
 }
@@ -33,29 +39,175 @@
     transition all .5s ease;
 }
 
-.navbar ul li a: hover{
+.navbar ul li a:hover{
     background-color: white;
     color: black;
+    box-shadow: 0 0 10px white;
 }
 
-.style1 {
+/* HOME */
+
+#home{
+    display: flex;
+    flex direction:column;
+    background-color: rgba;
+    height: 1150px;
+    justify-content: center;
+    align-items: center;
+}
+
+#home::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: url('img1.jpeg') no-repeat center center/cover;
+    height: 1200px;
+    width: 100%;
+    z-index: -1;
+    opacity: .8;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    /*border: 1px solid white;*/
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    right: 20%;
+    box-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white;
+    font-weight: bold;
+    background-color: whitesmoke;
+    opacity: .8;
+}
+
+/* About Me */
+
+#aboutme{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 20px;
+    margin-bottom: 50px;
+    height: 1150px;
+}
+
+#pic{
+    display: flex;
+}
+
+#pic img{
+    width: 600px;
+    height: 800px;
+}
+
+#introduction{
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    padding: 50px;
     font-size: 2rem;
-    padding: 1em;
+}
+
+#introduction h2{
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+.headings{
+    font-family: helvetica;
+    font-size: 4rem;
     text-align: center;
+    margin: 40px 40px;
+}
+
+/* Collaboration */
+
+#collaboration{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 20px;
+    margin-bottom: 50px;
+    height: 1150px;
+}
+
+#pic{
+    display: flex;
+}
+
+#pic img{
+    width: 600px;
+    height: 800px;
+}
+
+#introduction{
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    padding: 50px;
+    font-size: 2rem;
+}
+
+#introduction h2{
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+.headings{
+    font-family: helvetica;
+    font-size: 4rem;
+    text-align: center;
+    margin: 40px 40px;
+}
+
+/* Contact Me */
+
+#contact{
+display: flex; 
+flex-direction: column;
+box-sizing: border-box;
+background-color: black;
+color: white;
+padding: 20px;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    align-items: center;
+    margin: 20px 0px;
+}
+
+.input{
+    padding: 12px;
+    margin: 15px;
+    width: 20%;
+    border: none;
+    outline: none;
+}
+
+#msg{
+    width:20%;
+    padding: 10px;
+    margin: 15px;
+    border: none;
+    outline: none;
+}
+
+#send{
+    padding:10px;
+    width: 10%;
+    margin: 40px;
+    border: none;
+    outline: none;
+}
+
+#send:hover{
+    cursor: pointer;
+    box-shadow: 0 0 10px;
     color: white;
-    background-color: #DDB9B1;
-    text-align: center;
-    padding: 16px 0;
-    border-bottom: 2px solid #DDB9B1;
-    border-top: 2px solid #DDB9B1;
 }
-
-section {
-    display: grid;
-    grid-template-column: 1fr 200px 2fr'
-    width: 1000px;
-    margin: auto;
-}
-
-p {color: pink}
 
